--- a/.index/style/main.css
+++ b/.index/style/main.css
@@ -1,11 +1,3 @@
-/*
-  Indices styles: javascript version
-    This does its magic based on a bunch of Javascript that cruises
-    the DOM of Apache's HTML output and injects useful class names
-    throughout.
-
-  Indices: http://antisleep.com/software/.index
-*/
 
 /*==========================================================================*/
 
@@ -43,6 +35,16 @@ p.note {
     color: #999;
     font-size: 13px;
     font-style: italic;
+}
+
+a.code-editor {
+    color: #666 !important;
+    font-size: 15px !important;
+    margin-left: 15px;
+}
+
+a.code-editor:hover {
+    color: #000 !important;
 }
 
 
@@ -95,11 +97,6 @@ table.directory td.icon a {
     color: #666;
     font-size: 16px;
     margin-right: 0;
-}
-
-table.directory td a.code-editor {
-    color: #666;
-    font-size: 15px;
 }
 
 
